--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -8,7 +8,8 @@
     "contact": "Контакты",
     "language": "Язык",
     "catalog": "Каталог",
-    "logo_alt": "Логотип Vero Ceilings"
+    "logo_alt": "Логотип Vero Ceilings",
+    "home": "Главная"
   },
   "welcome": "Добро пожаловать в Vero Ceilings",
   "whyus": {
@@ -27,6 +28,11 @@
         "title": "15-летняя гарантия",
         "description": "Наша приверженность качеству подкреплена 15-летней гарантией, что дает вам спокойствие и уверенность в нашей продукции."
       }
+    },
+    "start_trial_button": "НАЧАТЬ ПРОЕКТ",
+    "impact_ceilings": {
+      "title": "100+ высокоэффективных потолков",
+      "description": "Vero предлагает более 100 дизайнов потолков, которые охватывают основные стили на современном рынке. Независимо от того, являетесь ли вы владельцем дома или опытным профессионалом, наш широкий ассортимент продукции в различных стилях предоставляет практичные, практические решения, которые помогут вам немедленно и конкурентоспособно применить свое видение."
     }
   },
   "hero": {
@@ -144,6 +150,10 @@
         "length": "25-50 м"
       }
     },
+    "paneli": {
+      "title": "Панели",
+      "description": "Высококачественные панели для различных применений."
+    },
     "specs_title": "Технические характеристики",
     "spec_keys": {
         "durability": "Долговечность",
@@ -203,17 +213,7 @@
       "projects": "Проекты",
       "contact": "Контакты"
     },
-    "product_detail": {
-      "dimensions": "Размеры",
-      "product": "Продукт",
-      "size": "Размер",
-      "name": "Имя",
-      "width": "Ширина",
-      "height": "Высота",
-      "length": "Длина",
-      "application_cases": "Сферы применения"
-    },
-      "footer_products": {
+    "products": {
       "title": "Продукты",
       "metal_armstrong": {
         "title": "Металлический Армстронг"
@@ -248,6 +248,10 @@
   },
   "about": {
     "page_title": "О нас",
+    "title": "О нашей компании",
+    "paragraph1": "Vero Ceilings - ведущий поставщик высококачественных потолочных решений. Мы стремимся предоставлять нашим клиентам лучшие продукты и услуги.",
+    "paragraph2": "Наша компания была основана в 2014 году и с тех пор предлагает первоклассные потолочные решения. У нас есть команда опытных профессионалов, которые увлечены своей работой.",
+    "paragraph3": "Мы предлагаем широкий ассортимент продукции для удовлетворения потребностей наших клиентов. Независимо от того, ищете ли вы простое или сложное потолочное решение, мы вам поможем.",
     "intro_title": "Группа компаний «Vero Group» выражает Вам свое почтение!",
     "intro_text": "Группа компаний «Vero Group», основанная в 2014 году. Холдинг включает в себя более 10 компаний, специализирующихся на производстве широкого спектра строительных материалов. Группа компаний «Vero Group» постоянно расширяет свой ассортимент, используя современное оборудование и передовые технологии, придерживается высоких стандартов качества, имеет международные сертификаты и производит экологически чистую продукцию, идеально подходящую для различных строительных применений.",
     "counter1_title": "Заводские рабочие",
@@ -288,6 +292,9 @@
       "question": "Предлагаете ли вы индивидуальные дизайнерские решения?",
       "answer": "Да, мы специализируемся на индивидуальных дизайнерских решениях. Наша команда тесно сотрудничает с архитекторами и дизайнерами для создания уникальных потолочных систем, отвечающих конкретным потребностям проекта."
     }
+  },
+  "projects": {
+    "page_title": "Наши проекты"
   },
   "architects": {
     "page_title": "Для архитекторов",
@@ -337,6 +344,19 @@
     "status_sending": "Отправка сообщения...",
     "status_success": "Спасибо за ваше сообщение! Мы свяжемся с вами в ближайшее время.",
     "status_error": "Не удалось отправить сообщение. Пожалуйста, попробуйте еще раз.",
-    "status_error_generic": "Произошла ошибка. Пожалуйста, попробуйте еще раз."
+    "status_error_generic": "Произошла ошибка. Пожалуйста, попробуйте еще раз.",
+    "title": "СВЯЖИТЕСЬ С НАМИ",
+    "subtitle": "Не стесняйтесь поддерживать с нами связь!",
+    "phone": "+998 (90) 098 11 10",
+    "email": "info@company.com",
+    "website": "www.company.com",
+    "form": {
+      "name": "Ваше имя",
+      "phone": "Ваш телефон",
+      "email": "Ваша электронная почта",
+      "subject": "Тема",
+      "message": "Сообщение",
+      "send": "ОТПРАВИТЬ СООБЩЕНИЕ"
+    }
   }
 }
