--- a/src/i18n/uz.json
+++ b/src/i18n/uz.json
@@ -234,9 +234,10 @@
     "contact": {
       "title": "Bog'lanish",
       "address": "Toshkent, Chilonzor, Chorbog' 27.",
-      "phone1": "+998 (90) 098 11 10",
-      "phone2": "+998 (90) 109 11 10",
-      "email": "veroceilingsuz@gmail.com"
+      "phone1": "+99878 333 73 77",
+      "phone2": "+998 90 049 11 10",
+      "email": "veroceiling@gmail.com",
+      "website": "veroceilings.uz"
     },
     "newsletter": {
       "title": "Bizning yangiliklarimizga obuna bo'ling",
@@ -346,9 +347,9 @@
     "status_error_generic": "Xatolik yuz berdi. Iltimos, qaytadan urunib ko'ring.",
     "title": "BIZ BILAN BOG'LANISH",
     "subtitle": "Biz bilan aloqada bo'lishdan tortinmang!",
-    "phone": "+998 (90) 098 11 10",
-    "email": "info@company.com",
-    "website": "www.company.com",
+    "phone": "+99878 333 73 77",
+    "email": "veroceiling@gmail.com",
+    "website": "veroceilings.uz",
     "form": {
       "name": "Sizning ismingiz",
       "phone": "Sizning telefoningiz",
